# v2b_syndata

./: .env.example  .gitignore  AUDIT_REPORT.md  CALIBRATION_NOTES.md  CLAUDE.md  DATA_LICENSE.md  DESIGN_NOTES.md  EDGE_CASE_REPORT.md  KNOB_AUDIT_S1.md  KNOB_AUDIT_S2.md  KNOB_REFERENCE.md  LICENSE  PAIRWISE_AUDIT.md  README.md  croissant.json  pyproject.toml  variations.patch
configs/: buildings.yaml  campus_10.yaml  campus_10_office.yaml  equipment.yaml  knobs.yaml  locations.yaml  multi_example.yaml  noise_profiles.yaml  overnight_medoffice_sanjose.yaml  populations.yaml  weather_profiles.yaml
data/: load_pipeline_cache
docs/: CALIBRATION_NOTES.md  CALIBRATION_RESULTS.md  COVERAGE_REPORT.md  DATASHEET.md  DESIGN_NOTES.md  ETHICS.md  GENERATION_DEMO_DECK.html  GENERATION_PIPELINE.html  GENERATION_VISUAL.html  GENERATIVE_MODELS.md  KDD_PAPER_STRUCTURE.md  KDD_READINESS.md  KDD_SUBMISSION_PLAN.md  KNOB_AUDIT_S2.md  KNOB_REFERENCE.md  MODEL_SELECTION.md  PAIRWISE_AUDIT.md  PROJECT_TRACKER.md  RELATED_WORK_RESEARCH.md
handoff/: CLAUDE_CODE_PROMPT.md  README.md
notebooks/: acn_calibration.ipynb
paper/: DATASHEET.md  ETHICS_FAIRNESS.md  OUTLINE.md  PLAN.md  RELATED_WORK.md  REPRODUCIBILITY_ACCESSIBILITY.md  main.tex  references.bib
showcase/: .gitignore  OVERVIEW.md  README.md  build_figures.py
tests/: conftest.py  test_arrival_mixture.py  test_arrival_window.py  test_auto_validation.py  test_batch.py  test_battery_dispatch.py  test_bench_v2b_dispatch.py  test_browser_e2e.py  test_calibration_bootstrap.py  test_calibration_policy.py  test_cli.py  test_cli_calibrate.py  test_consistency.py  test_custom_noise_profile.py  test_dag.py  test_depart_soc_knobs.py  test_der.py  test_descriptor_loader_calibration.py  test_descriptor_resolution.py  test_determinism_stress.py  test_dirichlet.py  test_dr_renderer.py  test_dwell_mixture.py  test_e5_hybrid.py  test_edge_cases.py  test_end_to_end.py  test_exogenous_hydrate.py  test_export_optimus.py  test_family_selection.py  test_gmm_k.py  test_knob_loader.py  test_marginal_determinism.py  test_multi_building.py  test_multiplier.py  test_no_overnight.py  test_noise_d3_clamp.py  test_noise_fixes.py  test_per_region_arrival.py  test_renderer_copula.py  test_reproducibility.py  (+17 more)
tools/: analyze_campus.py  analyze_campus_shared.py  analyze_overnight.py  bench_v2b_dispatch.py  fetch_buildingload_reference.py  finish_campus10.sh  gen_paper_appendix.py  ingest_evwatts.py  knob_audit.py  model_eval.py  (+22 more)
(+308 files in other folders)
