[project]
name = "v2b-syndata"
version = "0.1.0"
description = "Configurable synthetic V2B (Vehicle-to-Building) dataset generator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "networkx>=3.2",
    "pyyaml>=6.0",
    "scipy>=1.11",
    "pydantic>=2.5",
    "eppy>=0.5.63",
    "pyarrow>=14.0",
    "requests>=2.31",
    "ruamel.yaml>=0.18",
    "python-dotenv>=1.0",
    "python-docx>=1.2.0",
    "pypdf>=6.11.0",
    "flask>=3.1.3",
    "acnportal>=0.3.3",
    "setuptools<81",
]

[project.scripts]
v2b-syndata = "v2b_syndata.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/v2b_syndata"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-playwright>=0.5",
    "ruff>=0.6",
    "mypy>=1.8",
    "nrel-pysam>=7.1.1.post1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "real_energyplus: invoke the real EnergyPlus subprocess (opt out of the stub)",
    "webapp: Flask test-client endpoint tests",
    "browser: Playwright headless browser end-to-end tests",
]

[tool.coverage.run]
source = ["src/v2b_syndata"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
